--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
     "address":[
-        "",
-        "",
-        ""
+        "address1",
+        "address2",
+        "address3"
     ],
-    "farmer_num": 2,
+    "farmer_num": 3,
     "node_available_port":[30000,40000],
     "farmer_available_port":[40000,50000],
     "plot_size":"30G",
