Modify docker-compose configuration to use full nodes instead of archive nodes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,8 @@ services:
       "--chain", "gemini-2a",
       "--base-path", "/var/subspace",
       "--execution", "wasm",
-      "--state-pruning", "archive",
+      "--state-pruning", "1024",
+      "--keep-blocks","1024",
       "--port", "30333",
       "--rpc-cors", "all",
       "--rpc-methods", "safe",
