fix docker-compose bug

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
 # sure everyone is allowed to write there
       - node-data:/var/subspace:rw
 #      - /path/to/subspace-node:/var/subspace:rw
+    user: "1000"
     ports:
 # If port 30333 is already occupied by another Substrate-based node, replace all
 # occurrences of `30333` in this file with another value
@@ -48,6 +49,7 @@ services:
 # sure everyone is allowed to write there
       - farmer-data:/var/subspace:rw
 #      - /path/to/subspace-farmer:/var/subspace:rw
+    user: "1000"
     ports:
 # Un-comment following line to unlock farmer's RPC
 #      - "127.0.0.1:9955:9955"
