--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
 colorama==0.4.5
+cython==0.29.32
 cytoolz==0.12.0
 ecdsa==0.18.0
 eth-hash==0.3.3
@@ -12,7 +13,7 @@ eth-typing==3.2.0
 eth-utils==2.0.0
 idna==3.4
 more-itertools==8.14.0
-protobuf==4.21.6
+protobuf>=4.21.0
 py-bip39-bindings==0.1.10
 py-ed25519-zebra-bindings==1.0.1
 py-sr25519-bindings==0.1.5
