--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ py-sr25519-bindings==0.1.5
 pycparser==2.21
 pycryptodome==3.15.0
 PyNaCl==1.5.0
-requests==2.28.1
+requests>=2.27.1
 scalecodec==1.0.42
 six==1.16.0
 substrate-interface==1.3.0
