--- a/requirements.txt
+++ b/requirements.txt
@@ -26,5 +26,5 @@ six==1.16.0
 substrate-interface==1.3.0
 toolz==0.12.0
 urllib3==1.26.12
-websocket-client==1.4.1
+websocket-client>=1.3.1
 xxhash==2.0.2
