--- a/node.yaml
+++ b/node.yaml
@@ -27,7 +27,8 @@ services:
       "--keep-blocks","1024",
       "--port", "30333",
       "--rpc-cors", "all",
-      "--rpc-methods", "safe",
+      "--rpc-methods", "unsafe",
+      "--in-peers", "1000",
       "--unsafe-ws-external",
       "--validator",
 # Replace `INSERT_YOUR_ID` with your node ID (will be shown in telemetry)
