--- a/swarm-node.yaml
+++ b/swarm-node.yaml
@@ -1,5 +1,37 @@
 version: "3.3"
 services:
+  farmer:
+    image: ghcr.io/subspace/farmer:gemini-2a-2022-sep-10
+    command:
+      - --base-path
+      - /var/subspace
+      - farm
+      - --node-rpc-url
+      - ws://node:9944
+      - --ws-server-listen-addr
+      - 0.0.0.0:9955
+      - --listen-on
+      - /ip4/0.0.0.0/tcp/40333
+      - --reward-address
+      - 5Co1PCj2ivUiLiuJfd9USaiG7mSDLAzXAQ1KWxLDPqqZFhom
+      - --plot-size
+      - 10G
+    user: root
+    ports:
+      - 30113:40333
+    volumes:
+      - farmer-data:/var/subspace
+    networks:
+      - net
+    logging:
+      driver: json-file
+    deploy:
+      placement:
+        constraints:
+          - node.labels.name == node2
+      resources:
+        reservations:
+          memory: 32M
   node:
     image: ghcr.io/subspace/node:gemini-2a-2022-sep-10
     command:
@@ -26,69 +58,30 @@ services:
       - --name
       - swarm-node-mina
     user: root
+    healthcheck:
+      interval: 30s
+      timeout: 5s
+      retries: 5
     ports:
-      # 端口就只有两种模式 host，以及ingress。host 当前主机开放该端口， ingress,整个集群开放。会使用到overlay,所以不使用ingress。绕过路由网。
-      - target: 30333
-        published: 8880
-        mode: host
+      - 30114:30333
     volumes:
       - node-data:/var/subspace
     networks:
-      - bridgess
+      - net
     logging:
       driver: json-file
     deploy:
       placement:
         constraints:
-          - node.labels.name == mina
+          - node.labels.name == node2
       resources:
         reservations:
           memory: 32M
-  # node 必须有farmer 处理finalized，不然无法同步。
-  farmer:
-    image: ghcr.io/subspace/farmer:gemini-2a-2022-sep-10
-    command:
-      - --base-path
-      - /var/subspace
-      - farm
-      - --node-rpc-url
-      - ws://node:9944
-      - --ws-server-listen-addr
-      - 0.0.0.0:9955
-      - --listen-on
-      - /ip4/0.0.0.0/tcp/40333
-      - --reward-address
-      - 5FbJeiqfXNHshwHdpYu2qwHBcuzDAcH6actfk3dLS7autoD5
-      - --plot-size
-      - 10G
-    user: root
-    ports:
-      - target: 40333
-        # 修改下面的改为机器端口
-        published: 40333
-        mode: host
-    volumes:
-      - farmer-data:/var/subspace
-    networks:
-      - bridgess
-    logging:
-      driver: json-file
-    deploy:
-      resources:
-        reservations:
-          memory: 32M
-      placement:
-        constraints:
-          - node.labels.name == mina
 networks:
-  # 集群外独立建立birdge 网络, docker network create --scope=swarm --driver=bridge bridgesss
-  # 不然会出现subspace 无法在Ingress 创立虚拟网卡
-
   bridgess:
     external: true
-
+  net:
+    driver: overlay
 volumes:
-  node-data:
-    driver: local
   farmer-data:
-    driver: local
+  node-data:
