--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,7 +11,8 @@ on:
   push:
     branches: [ "main" ]
     # Publish semver tags as releases.
-    tags: [ "latest" ]
+    tags:
+        - "v*.*.*"
   pull_request:
     branches: [ "main" ]
 
